fixed [Display news: List view] Incorrect size and alignment of UI elements of news item on 'List view' page (1024 resolution Mozilla) #1879

--- a/src/app/component/eco-news/components/news-list/news-list-list-view/news-list-list-view.component.scss
+++ b/src/app/component/eco-news/components/news-list/news-list-list-view/news-list-list-view.component.scss
@@ -31,6 +31,7 @@ div {
   text-transform: uppercase;
   color: var(--primary-green);
   margin-right: 5px;
+  display: inline-block;
 }
 
 .eco-news_list-content {
@@ -98,6 +99,7 @@ div {
     width: 100%;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
+    overflow: hidden;
   }
 
   .eco-news_list-view-wrp {
@@ -111,9 +113,9 @@ div {
 
 @media (min-width: 1024px) {
   .eco-news_list-view-wrp {
-    height: 167px;
-    -ms-grid-columns: 300px auto;
-    grid-template-columns: 300px auto;
+    height: 171px;
+    -ms-grid-columns: 299px auto;
+    grid-template-columns: 299px auto;
   }
 
   .eco-news_list-content-title {
